growler-friday/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: growler-friday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: growler-friday
  template:
    metadata:
      labels:
        app: growler-friday
    spec:
      containers:
      - name: growler-friday
        image: alkrauss48/growler-friday:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: growler-friday
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: growler-friday
